crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/032.cypher
MATCH (n) RETURN n; -- sql style comment attempt
